--- a/components/daterange-picker/assets/daterangepicker.scss
+++ b/components/daterange-picker/assets/daterangepicker.scss
@@ -56,12 +56,12 @@
   line-height: 1em;
 }
 
-.daterangepicker:before, .daterangepicker:after {
-  position: absolute;
-  display: inline-block;
-  border-bottom-color: rgba(0, 0, 0, 0.2);
-  content: '';
-}
+// .daterangepicker:before, .daterangepicker:after {
+//   position: absolute;
+//   display: inline-block;
+//   border-bottom-color: rgba(0, 0, 0, 0.2);
+//   content: '';
+// }
 
 .daterangepicker:before {
   top: -7px;
@@ -93,13 +93,13 @@
   margin-right: auto;
 }
 
-.daterangepicker.openscenter:after {
-  left: 0;
-  right: 0;
-  width: 0;
-  margin-left: auto;
-  margin-right: auto;
-}
+// .daterangepicker.openscenter:after {
+//   left: 0;
+//   right: 0;
+//   width: 0;
+//   margin-left: auto;
+//   margin-right: auto;
+// }
 
 .daterangepicker.opensright:before {
   left: 9px;
@@ -145,8 +145,8 @@
 
 .daterangepicker .drp-calendar {
   display: none;
-  max-width: 270px;
-  width: 270px;
+//   max-width: 270px;
+//   width: 270px;
 }
 
 .daterangepicker .drp-calendar.left {
